<resources>
  <string name="preferenceName">DataBase</string>

  <string name="app_name">DeviceUI</string>
  <string name="action_settings">Settings</string>
  <string name="main_text">Connect</string>
  <string name="button_wifi_text">Wi-Fi</string>
  <string name="button_bluetooth_text">Bluetooth</string>
  <string name="language">Language</string>
  <string name="receiving">Receiving</string>
  <string name="stop">Stop</string>
  <string name="calculation">Calculation</string>
  <string name="joinBT">Join BT</string>
  <string name="Count">Count</string>

  <string name="enterMessage">Enter message</string>
  <string name="publish">Publish</string>
  <string name="subscribe">Subscribe</string>
  <string name="unsubscribe">Unubscribe</string>
  <string name="btdisabled">bt disabled</string>
  <string name="upperLimit">Upper Limit</string>
  <string name="lowerLimit">Lower Limit</string>
  <string name="bluetoothLENotSupported">bluetooth LE not supported</string>
  <string name="bluetoothIsDisabled">bluetooth is disabled</string>
  <string name="useSCAN">use SCAN to refresh devices</string>
  <string name="noBluetooth">no bluetooth devices found</string>

  <string name="connectСompleted">connect completed</string>
  <string name="connectLost">connect lost!!!!</string>
  <string name="connectingTo">Connecting to</string>
  <string name="address"> | address </string>
  <string name="arrivedClientID">~ arrived client ID:</string>
  <string name="savedPreferences">Saved Preferences</string>
  <string name="connecting">Connecting\.\.\.</string>





  <string name="menu_type_view">Type view</string>
  <string name="menu_switch_wifi">Switch to Wi-Fi</string>
  <string name="menu_switch_bluetooth">Switch to Bluetooth</string>
  <string name="menu_report">Report</string>

  <string name="menu_options">Options</string>
  <string name="title_activity_options">Options</string>
  <string name="options_range">Range</string>
  <string name="options_mode">Mode</string>
  <string name="options_calibration">Сalibration</string>

  <string name="templates_header">Report Templates</string>
  <string name="template_1">template one</string>
  <string name="template_2">template two</string>
  <string name="template_3">template three</string>


  <!-- Strings related to Settings -->

  <!-- Example General settings -->
  <string name="pref_header_general">General</string>

  <string name="pref_title_social_recommendations">Enable social recommendations</string>
  <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

  <string name="pref_title_display_name">Display name</string>
  <string name="pref_default_display_name">John Smith</string>

  <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
  <string-array name="pref_example_list_titles">
    <item>Always</item>
    <item>When possible</item>
    <item>Never</item>
  </string-array>
  <string-array name="pref_example_list_values">
    <item>1</item>
    <item>0</item>
    <item>-1</item>
  </string-array>


  <string name="devices">Bluetooth LE Devices</string>
  <string name="location_permission_title">Location permission required</string>
  <string name="location_permission_message">This app does not use location information, but scanning for Bluetooth LE devices requires this permission</string>

  <string name="location_denied_title">Location permission denied</string>
  <string name="location_denied_message">As location permission has not been granted, this app cannot scan for Bluetooth LE devices.</string>
  <string name="pairing_request">PAIRING requested\n-> Perform pairing steps. Connect again</string>

  <!-- Example settings for Data & Sync -->
  <string name="pref_header_data_sync">Data and sync</string>

  <string name="pref_title_sync_frequency">Sync frequency</string>
  <string-array name="pref_sync_frequency_titles">
    <item>15 minutes</item>
    <item>30 minutes</item>
    <item>1 hour</item>
    <item>3 hours</item>
    <item>6 hours</item>
    <item>Never</item>
  </string-array>
  <string-array name="pref_sync_frequency_values">
    <item>15</item>
    <item>30</item>
    <item>60</item>
    <item>180</item>
    <item>360</item>
    <item>-1</item>
  </string-array>

  <string-array name="list_preference_entries">
    <item>Entry 1</item>
    <item>Entry 2</item>
    <item>Entry 3</item>
  </string-array>

  <string-array name="list_preference_entry_values">
    <item>1</item>
    <item>2</item>
    <item>3</item>
  </string-array>

  <string-array name="multi_select_list_preference_default_value" />

  <string name="pref_title_system_sync_settings">System sync settings</string>

  <!-- Example settings for Notifications -->
  <string name="pref_header_notifications">Notifications</string>

  <string name="pref_title_new_message_notifications">New message notifications</string>

  <string name="pref_title_ringtone">Ringtone</string>
  <string name="pref_ringtone_silent">Silent</string>

  <string name="pref_title_vibrate">Vibrate</string>
  <string name="title_activity_templates">TemplatesActivity</string>
  <string name="title_activity_input">InputActivity</string>
  <string name="title_activity_device" translatable="false">DeviceActivity</string>
  <string name="title_activity_main2" translatable="false">Main2Activity</string>

</resources>
