<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.alex.atmega.com.deviceui.GraphActivity">
    <item
        android:id="@+id/graph_type_view"
        android:orderInCategory="100"
        android:title="@string/menu_type_view"
        app:showAsAction="never" />
    <item
        android:id="@+id/graph_switch_wifi"
        android:orderInCategory="100"
        android:title="@string/menu_switch_wifi"
        app:showAsAction="never" />
    <item
        android:id="@+id/graph_switch_bluetooth"
        android:orderInCategory="100"
        android:title="@string/menu_switch_bluetooth"
        app:showAsAction="never" />
    <item
        android:id="@+id/graph_report"
        android:orderInCategory="100"
        android:title="@string/menu_report"
        app:showAsAction="never" />
    <item
        android:id="@+id/graph_options"
        android:orderInCategory="100"
        android:title="@string/menu_options"
        app:showAsAction="never" />
</menu>
