<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="@string/main_text" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:width="220dp"
        android:layout_gravity="center_horizontal"
        tools:text="@string/button_wifi_text" />

    <Button
      android:id="@+id/input"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="15dp"
      android:width="220dp"
      android:layout_gravity="center_horizontal"
      tools:text="input" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:width="220dp"
        android:layout_gravity="center_horizontal"
        tools:text="@string/button_bluetooth_text" />



</LinearLayout>
