<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.example.deviceui.MainActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/AppTheme.AppBarOverlay">

      <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">



      <!--        <android.support.design.widget.AppBarLayout-->
      <!--          android:layout_width="match_parent"-->
      <!--          android:layout_height="wrap_content">-->

      <!--          <android.support.v7.widget.Toolbar-->
      <!--            android:id="@+id/toolbar"-->
      <!--            android:layout_width="match_parent"-->
      <!--            android:layout_height="?attr/actionBarSize"-->
      <!--            android:background="?attr/colorPrimary" />-->

      <!--        </android.support.design.widget.AppBarLayout>-->

      <!--        <Button-->
      <!--          android:id="@+id/button"-->
      <!--          android:layout_width="wrap_content"-->
      <!--          android:layout_height="wrap_content"-->
      <!--          android:layout_gravity="center_horizontal"-->
      <!--          android:layout_marginTop="15dp"-->
      <!--          android:width="220dp"-->
      <!--          android:text="@string/button_wifi_text" />-->

      <Button
        android:id="@+id/btn_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:width="220dp"
        android:text="@string/main_text"
        android:textAllCaps="true" />

      <Button
        android:id="@+id/btn_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:width="220dp"
        android:text="@string/button_bluetooth_text" />

      <Button
        android:id="@+id/btn_find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:width="220dp"
        android:visibility="gone"
        android:text="find" />

      <Button
          android:id="@+id/language"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="15dp"
          android:width="220dp"
          android:onClick="setLocale"
          android:text="@string/language"/>


<!--      <org.florescu.android.rangeseekbar.RangeSeekBar-->
<!--        android:id="@+id/rangeSeekBar"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content">-->
<!--      </org.florescu.android.rangeseekbar.RangeSeekBar>-->

<!--      <LinearLayout-->
<!--        android:orientation="horizontal"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content">-->

<!--        <EditText-->
<!--          android:id="@+id/edit_speedMat"-->
<!--          android:layout_width="0dp"-->
<!--          android:layout_height="match_parent"-->
<!--          android:layout_weight="1"-->
<!--          android:text="5000"-->
<!--          android:visibility="invisible"-->
<!--          android:inputType="text|textNoSuggestions"-->
<!--          android:singleLine="true" />-->

<!--        <Button-->
<!--          android:id="@+id/btn_calc"-->
<!--          android:layout_width="wrap_content"-->
<!--          android:layout_height="wrap_content"-->
<!--          android:visibility="invisible"-->
<!--          android:text="Посчитать"-->
<!--          />-->

<!--      </LinearLayout>-->



<!--      <com.github.mikephil.charting.charts.LineChart-->
<!--        android:id="@+id/chart1"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_above="@+id/seekBar1" />-->


    </LinearLayout>



    <!--    <RelativeLayout-->
    <!--        android:id="@+id/fragment"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>-->


  </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>
